Updating README. Added small divider.

--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
-        <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-3DVYPBSB12"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'G-3DVYPBSB12');
-        </script>
-
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
 
         <!-- Open Graph Protocol / Facebook -->
-        <!-- <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://eckenrode-septic.onrender.com" />
-        <meta property="og:title" content="Eckenrode's Septic Tank Cleaning" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://www.masongalat.com" />
+        <meta property="og:title" content="Mason Galat Portfolio" />
         <meta
             property="og:description"
-            content="Family owned and operated facility located in Loretto, Pennsylvania.
-            Since 1960, we have been dedicated to providing top-notch services with professional finesse."
+            content="Hi, I'm Mason. A motivated web developer with an eagerness to create smooth, appealing websites."
         />
-        <meta property="og:image" content="https://eckenrode-septic.onrender.com/favicon.ico" />
-        <meta property="og:logo" content="https://eckenrode-septic.onrender.com/favicon.ico" /> -->
+        <meta property="og:image" content="https://www.masongalat.com/favicon.ico" />
+        <meta property="og:logo" content="https://www.masongalat.com/favicon.ico" />
 
         <!-- Open Graph Protocol / Twitter -->
-        <!-- <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://eckenrode-septic.onrender.com" />
-        <meta property="twitter:title" content="Eckenrode's Septic Tank Cleaning" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://www.masongalat.com" />
+        <meta property="twitter:title" content="Mason Galat Portfolio" />
         <meta
             property="twitter:description"
-            content="Family owned and operated facility located in Loretto, Pennsylvania.
-            Since 1960, we have been dedicated to providing top-notch services with professional finesse."
+            content="Hi, I'm Mason. A motivated web developer with an eagerness to create smooth, appealing websites."
         />
-        <meta property="twitter:image" content="https://eckenrode-septic.onrender.com/favicon.ico" /> -->
+        <meta property="twitter:image" content="https://www.masongalat.com/favicon.ico" />
 
         <!-- Manifest -->
         <link rel="manifest" href="manifest.json" />
